syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";
import "proto/msg-event.proto";
import "proto/wa-def.proto";
import "proto/wa-group.proto";


message AccountContext {
    string id = 1; // jid
    uint32 registration_id = 2;
    string platform = 3;
    string business_name = 4;
    string push_name = 5;
}

message SubscribeRequest {
    string uuid = 1;
}
message Event {
    string subscription_id = 1;
    string uuid = 2;
    google.protobuf.Timestamp timestamp = 3;
    AccountContext account_context = 4;
    oneof event {
        MessageEvent message_event = 20;
    }
}

message MessageCmd {
    string to = 1;
    Message message = 2;
}
message AckCmd {
    repeated string message_ids = 1;
    google.protobuf.Timestamp timestamp = 2;
    string chat_jid = 3; // must always be set to the chat ID (user ID in DMs and group ID in group chats)
    string sender_jid = 4; // ust be set in group chats and must be the user ID who sent the message
}

message GroupInfoCmd {
    string jid = 1;
}

message Command {
    string uuid = 1;

    oneof operation {
        MessageCmd message_cmd = 20;
        AckCmd ack_cmd = 21;
        GroupInfoCmd group_info_cmd = 22;
    }
}
message CommandResponse {
    string uuid = 1;
    oneof response {
        GroupInfo group_info = 20;
    }
}


service ChatManager {
    rpc Subscribe (SubscribeRequest) returns (stream Event);
    rpc Execute (Command) returns (CommandResponse);
}